--- a/style.css
+++ b/style.css
@@ -270,7 +270,29 @@ footer .circle {
 @media screen and (max-width: 768px) {
     body {
         text-align: center;
-    } 
+    }
+    
+    nav{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul li{
+        align-items: flex-start;
+        margin-left: 20px;
+    }
+
+
+    
+nav ul li:hover{
+    background: var(--bright-blue);
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 7px;
+    
+}
 
     .light-blueish::before{
         background-image: url(./images/bg-curve-mobile.svg);
